Added configs & more business logic implementation classes