@@ -1,21 +1,26 @@
-// src/main/java/com/wpc/servicesync_backend/service/EmployeeService.java
 package com.wpc.servicesync_backend.service;
 
 import com.wpc.servicesync_backend.dto.EmployeeLoginRequest;
 import com.wpc.servicesync_backend.dto.EmployeeResponse;
+import com.wpc.servicesync_backend.exception.ServiceException;
+import com.wpc.servicesync_backend.model.dto.EmployeeDto;
 import com.wpc.servicesync_backend.model.entity.Employee;
 import com.wpc.servicesync_backend.model.entity.EmployeeRole;
 import com.wpc.servicesync_backend.repository.EmployeeRepository;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.cache.annotation.Cacheable;
+import org.springframework.cache.annotation.CacheEvict;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.time.LocalDateTime;
+import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -43,8 +48,7 @@ public class EmployeeService {
             return Optional.empty();
         }
 
-        // In a real implementation, you'd check the password
-        // For demo purposes, we'll accept any password
+        // For production, uncomment password validation:
         // if (!passwordEncoder.matches(request.getPassword(), employee.getPasswordHash())) {
         //     log.warn("Invalid password for employee: {}", request.getEmployeeId());
         //     return Optional.empty();
@@ -59,31 +63,65 @@ public class EmployeeService {
     }
 
     @Transactional(readOnly = true)
+    @Cacheable(value = "employees", key = "#employeeId")
     public Optional<EmployeeResponse> findByEmployeeId(String employeeId) {
         return employeeRepository.findByEmployeeId(employeeId)
                 .map(this::mapToResponse);
     }
 
     @Transactional(readOnly = true)
-    public Optional<EmployeeResponse> findById(UUID id) {
-        return employeeRepository.findById(id)
-                .map(this::mapToResponse);
+    public EmployeeDto getEmployeeById(UUID id) {
+        Employee employee = employeeRepository.findById(id)
+                .orElseThrow(() -> ServiceException.notFound("Employee not found with id: " + id));
+        return convertToDto(employee);
     }
 
     @Transactional(readOnly = true)
-    public List<EmployeeResponse> findByRole(EmployeeRole role) {
-        return employeeRepository.findByRoleAndIsActiveTrue(role)
-                .stream()
-                .map(this::mapToResponse)
-                .toList();
+    public EmployeeDto getEmployeeByEmployeeId(String employeeId) {
+        Employee employee = employeeRepository.findByEmployeeId(employeeId)
+                .orElseThrow(() -> ServiceException.notFound("Employee not found with employeeId: " + employeeId));
+        return convertToDto(employee);
     }
 
     @Transactional(readOnly = true)
-    public List<EmployeeResponse> findByHospital(UUID hospitalId) {
+    public List<EmployeeDto> getEmployeesByHospital(UUID hospitalId) {
         return employeeRepository.findByHospitalAndRole(hospitalId, null)
                 .stream()
-                .map(this::mapToResponse)
-                .toList();
+                .map(this::convertToDto)
+                .collect(Collectors.toList());
+    }
+
+    @Transactional(readOnly = true)
+    public List<EmployeeDto> getEmployeesByRole(EmployeeRole role) {
+        return employeeRepository.findByRoleAndIsActiveTrue(role)
+                .stream()
+                .map(this::convertToDto)
+                .collect(Collectors.toList());
+    }
+
+    @CacheEvict(value = "employees", key = "#id")
+    public EmployeeDto updateEmployee(UUID id, EmployeeDto employeeDto) {
+        Employee employee = employeeRepository.findById(id)
+                .orElseThrow(() -> ServiceException.notFound("Employee not found with id: " + id));
+
+        // Update allowed fields
+        if (employeeDto.getName() != null) {
+            employee.setName(employeeDto.getName());
+        }
+        if (employeeDto.getEmail() != null) {
+            employee.setEmail(employeeDto.getEmail());
+        }
+        if (employeeDto.getShiftSchedule() != null) {
+            employee.setShiftSchedule(employeeDto.getShiftSchedule());
+        }
+        if (employeeDto.getIsActive() != null) {
+            employee.setIsActive(employeeDto.getIsActive());
+        }
+
+        employee = employeeRepository.save(employee);
+        log.info("Employee updated successfully: {}", employee.getEmployeeId());
+
+        return convertToDto(employee);
     }
 
     @Transactional(readOnly = true)
@@ -92,6 +130,23 @@ public class EmployeeService {
                 .stream()
                 .map(this::mapToResponse)
                 .toList();
+    }
+
+    public EmployeeDto convertToDto(Employee employee) {
+        List<String> wardAssignments = parseWardAssignments(employee.getShiftSchedule());
+
+        return EmployeeDto.builder()
+                .id(employee.getId())
+                .employeeId(employee.getEmployeeId())
+                .name(employee.getName())
+                .email(employee.getEmail())
+                .role(employee.getRole())
+                .hospitalName(employee.getHospital().getName())
+                .shiftSchedule(employee.getShiftSchedule())
+                .isActive(employee.getIsActive())
+                .lastLogin(employee.getLastLogin())
+                .wardAssignments(wardAssignments)
+                .build();
     }
 
     private EmployeeResponse mapToResponse(Employee employee) {
@@ -108,5 +163,20 @@ public class EmployeeService {
                 .lastLogin(employee.getLastLogin())
                 .createdAt(employee.getCreatedAt())
                 .build();
+    }
+
+    private List<String> parseWardAssignments(String shiftSchedule) {
+        if (shiftSchedule == null || shiftSchedule.trim().isEmpty()) {
+            return List.of();
+        }
+
+        if ("ALL".equalsIgnoreCase(shiftSchedule.trim())) {
+            return List.of("ALL");
+        }
+
+        return Arrays.stream(shiftSchedule.split(","))
+                .map(String::trim)
+                .filter(s -> !s.isEmpty())
+                .collect(Collectors.toList());
     }
 }
